Empezada Pantalla CreatePet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,16 @@
     <!-- Select/Add Pet Screen -->
     <string name="Pets">Mascotas</string>
 
+    <!-- Create Pet Screen -->
+    <string name="Name">Nombre</string>
+
+    <string-array name="species">
+        <item>Perro</item>
+        <item>Gato</item>
+        <item>Ave</item>
+        <item>Conejo</item>
+        <item>Hamster</item>
+        <item>Otro</item>
+    </string-array>
 
 </resources>
